# ipxe

./: .gitignore  404.html  README.md  config.yaml  elfshoe.ipxe  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: enable-pages.yml  generate-menu.yml
customization/: index.html
docs/: customization.md  elfshoe.ipxe  index.md  setup.md
scripts/: README.md  update-ipxe-menu.service  update-ipxe-menu.sh  update-ipxe-menu.timer
search/: search_index.json
setup/: index.html
src/ipxe/: __init__.py  __main__.py
